src/objects/Benefit__c.object
<CustomObject>
    <fields>
        <fullName>Dental_Vision_Insurance__c</fullName>
        <label>Dental/Vision Insurance</label>
        <picklist>
            <controllingField>Has_Dental_Vision_Insurance__c</controllingField>
            <picklistValues>
                <fullName>Employee only</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Employee and partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee and family</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Employee_Email__c</fullName>
        <label>Employee Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee__c</fullName>
        <label>Employee</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Benefits</relationshipLabel>
        <relationshipName>Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Gross_Pay__c</fullName>
        <label>Gross Pay</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Has_Dental_Vision_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Dental/Vision Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Medical_Insurance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Medical Insurance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Medical_Insurance__c</fullName>
        <label>Medical Insurance</label>
        <picklist>
            <controllingField>Has_Medical_Insurance__c</controllingField>
            <picklistValues>
                <fullName>Employee only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee and partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee and family</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Net_Pay__c</fullName>
        <formula>Gross_Pay__c * 0.88</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Pay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Benefit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>B-{0000}</displayFormat>
        <label>Benefit Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Gross_Pay_can_not_be_over_10000</fullName>
        <active>true</active>
        <errorConditionFormula>Gross_Pay__c &gt; 10001</errorConditionFormula>
        <errorDisplayField>Dental_Vision_Insurance__c</errorDisplayField>
        <errorMessage>The gross pay can not be over $10,000</errorMessage>
    </validationRules>
</CustomObject>